package behavioral.observer.ca4_topic;

public interface TopicListener {
    public void listen(TinTuc t);
}
